# release-integration-template-python

./: .dockerignore  .env  .gitignore  AGENTS.md  Dockerfile  LICENSE.md  License.md  PLUGIN_DEVELOPMENT.md  README-plugin.md  README.md  SKILL.md  build.bat  build.sh  docker-compose.yaml  project.properties  pyproject.toml  release_api_client-26.1.0-py3-none-any.whl  requirements.txt  xlw  xlw.bat
.xebialabs/: config.yaml  wrapper.conf
dev-environment/: .env  docker-compose.yaml
dev-environment/digitalai-release/: Dockerfile
dev-environment/digitalai-release-remote-runner/: Dockerfile  spin-remote-runner.sh
dev-environment/digitalai-release-setup/: .gitignore  Dockerfile  config.yaml  docker-runner.yaml  instance-configuration.yaml  remote-runnner-user.yaml  secrets.xlvals
doc/: jenkins-guided-tour.md  reference.md  remote-runner-quickstart.md  setup.md  tutorial.md
docs/: AGENTS.md  PLUGIN_DEVELOPMENT.md  SKILL.md
resources/: plugin-version.properties  synthetic.xml  type-definitions-test.xml  type-definitions.yaml  unused-synthetic.xml
src/: create_and_start_release.py  dummy_json.py  hello.py  hello1.py  hello2.py  hello_with_lookup.py  name_lookup.py  sample_release_api_task.py  sample_server_task.py  server_query.py  set_system_message.py  test_connection.py
src/sample/: hello3.py
tests/: test_dummy_json.py  test_hello.py  test_with_server.py
tests/integration/: conftest.py  test_create_and_start_release_live.py  test_sample_release_api_task_live.py  test_sample_server_task.py  test_server_query.py  test_set_system_message_live.py
(+8 files in other folders)
